# homeWork20

./: people.json  pyproject.toml  scrapy.cfg
homeWork20/: items.py  middlewares.py  pipelines.py  settings.py
homeWork20/spiders/: workua.py
